--- a/MemoryLoader/MemoryLoader/MemoryLoader.vcxproj
+++ b/MemoryLoader/MemoryLoader/MemoryLoader.vcxproj
@@ -190,8 +190,8 @@
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>echo 'copy $(TargetPath) to "C:\temp\AutomaticRebase\idasdk75\IdaDir\$(AssemblyName)64.dll"'
-copy  "$(TargetPath)" C:\temp\AutomaticRebase\idasdk75\IdaDir\$(AssemblyName)64.dll</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_32_address_ida|x64'">
@@ -216,8 +216,8 @@ copy  "$(TargetPath)" C:\temp\AutomaticRebase\idasdk75\IdaDir\$(AssemblyName)64.
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>echo 'copy  "$(TargetPath)" C:\temp\AutomaticRebase\idasdk75\IdaDir\$(AssemblyName).dll'
-copy  "$(TargetPath)" C:\temp\AutomaticRebase\idasdk75\IdaDir\$(AssemblyName).dll</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
